# BifrostScript

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vm_command_line.cpp
include/bifrost/: bifrost_vm.h  bifrost_vm.hpp
scripts/: test_script.bscript  test_script.bts
src/: bifrost_hash_map.c  bifrost_libc.c  bifrost_libc.h  bifrost_vm_api.c  bifrost_vm_debug.c  bifrost_vm_debug.h  bifrost_vm_function_builder.c  bifrost_vm_function_builder.h  bifrost_vm_gc.c  bifrost_vm_gc.h  bifrost_vm_instruction_op.h  bifrost_vm_lexer.c  bifrost_vm_lexer.h  bifrost_vm_obj.c  bifrost_vm_obj.h  bifrost_vm_parser.c  bifrost_vm_parser.h  bifrost_vm_value.c  bifrost_vm_value.h
